2007-01-02  Brady Eidson  <beidson@apple.com>

        Reviewed extensively and repeatedly by Darin

        <rdar://problem/4887137> - WebCore Back/Forward Cache 
        Most things not specifically commented on in the ChangeLog can be summed up as 
        "Do things exactly the same way as we used to, but just stick in WebCore-land as much as possible"

        * History/WebBackForwardList.mm:
        (kitPrivate): Convenience functions to help with subbing "WebBackForwardListPrivate" for WebCore::BackForwardList
        (core):
        (backForwardListWrappers): A HashMap pattern used to map WebCore objects to their WebKit counterpart
        (kit):
        (+[WebBackForwardList setDefaultPageCacheSizeIfNecessary]):
        (-[WebBackForwardList initWithWebCoreBackForwardList:]):
        (-[WebBackForwardList init]):
        (-[WebBackForwardList dealloc]):
        (-[WebBackForwardList finalize]):
        (-[WebBackForwardList _close]):
        (-[WebBackForwardList addItem:]):
        (-[WebBackForwardList removeItem:]):
        (-[WebBackForwardList containsItem:]):
        (-[WebBackForwardList goBack]):
        (-[WebBackForwardList goForward]):
        (-[WebBackForwardList goToItem:]):
        (-[WebBackForwardList backItem]):
        (-[WebBackForwardList currentItem]):
        (-[WebBackForwardList forwardItem]):
        (vectorToNSArray):
        (-[WebBackForwardList backListWithLimit:]):
        (-[WebBackForwardList forwardListWithLimit:]):
        (-[WebBackForwardList capacity]):
        (-[WebBackForwardList setCapacity:]):
        (-[WebBackForwardList description]):
        (-[WebBackForwardList _clearPageCache]):
        (-[WebBackForwardList setPageCacheSize:]):
        (-[WebBackForwardList pageCacheSize]):
        (-[WebBackForwardList _usesPageCache]):
        (-[WebBackForwardList backListCount]):
        (-[WebBackForwardList forwardListCount]):
        (-[WebBackForwardList itemAtIndex:]):