@@ -1,3 +1,12 @@
+2007-01-02  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Geoff.
+
+        Remove un-used function.
+
+        * WebCoreSupport/WebContextMenuClient.h:
+        * WebCoreSupport/WebContextMenuClient.mm:
+
 2007-01-02  Brady Eidson  <beidson@apple.com>
 
         Reviewed extensively and repeatedly by Darin
